[백승종] 수정사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -246,11 +246,14 @@ a:hover,a:active,a:focus{text-decoration:none}
 .cm_grid .gridBodyDefault button{background: gainsboro; border-radius: 10px;  cursor: pointer;}
 .cm_grid .gridBodyDefault button:hover{background:skyblue;} */
 
-.cm_grid .gridBodyDefault button{background: gainsboro;border-radius: 3px;cursor: pointer;width: auto !important;box-sizing: border-box;padding: 1px 6px;height: auto !important;background: #eb4545;color: #fff;border: 1px solid #c93333;box-shadow: none;}
-.cm_grid .gridBodyDefault button:hover{background: #ae2222;border-color: #ae2222;}
+.cm_grid .gridBodyDefault button{background: gainsboro;border-radius: 3px;cursor: pointer;width: auto !important;box-sizing: border-box;padding: 1px 6px;height: auto !important;background: #2539a5;color: #fff;border: 1px solid #1a237e;box-shadow: none;}
+.cm_grid .gridBodyDefault button:hover{background: #2847ff;border-color: #3f51b5;}
 .cm_grid .req{background-color:#fffdd8;}
 
+.table_btn {background: gainsboro;border-radius: 3px;cursor: pointer;width: auto !important;box-sizing: border-box;padding: 1px 6px;height: auto !important;background: #2539a5;color: #fff;border: 1px solid #1a237e;box-shadow: none;}
+.table_btn :hover{background: #2847ff;border-color: #3f51b5;}
 
+.table_btn.w2trigger_disabled  {background: gainsboro;border-radius: 3px;cursor: pointer;width: auto !important;box-sizing: border-box;padding: 1px 6px !important; height: auto !important;background: #fff;color: #b3b3b3;border: 1px solid #1a237e;box-shadow: none;}
 
 /* tabControl */
 .cm_tabmenu{position:relative;padding:0;margin:0;margin:0}/* margin:15px 0 0 */
@@ -278,19 +281,20 @@ a:hover,a:active,a:focus{text-decoration:none}
 .tbl_search .tbl_sc .btn_cm{position:relative;display:inline-block;padding:0 1px 0 0;margin:0 0 0 6px;background:url(/cm/images/contents/bg_btn_cm.png) no-repeat 100% 0;vertical-align:middle}
 .tbl_search .tbl_sc .btn_cm a{position:relative;display:inline-block;padding:4px 17px 3px 17px;height:17px;line-height:13px;font-weight:bold;color:#fff;background:url(/cm/images/contents/bg_btn_cm_f.png) no-repeat;margin-left:-3px;}
 .tbl_search .tbl_sc input{height:20px !important;}
-.btn_com{position:relative;display:inline-block;padding:0 3px 0 0;margin:0 0 0 3px;background:url(/cm/images/contents/bg_btn_com.gif) no-repeat 100% 0;vertical-align:middle}
-.btn_com a{position:relative;display:inline-block;padding:4px 14px 3px 17px;height:15px;line-height:11px;font-weight:bold;color:#fff;background:url(/cm/images/contents/bg_btn_com.gif) no-repeat;margin-left:-3px;}
+.btn_com{position:relative;display:inline-block;padding:0 3px 0 0;margin:0 0 0 3px;/* background:url(/cm/images/contents/bg_btn_com.gif) no-repeat 100% 0; */vertical-align:middle;}
+.btn_com a{position:relative;display:inline-block;padding: 5px 13px;height:15px;line-height:11px;font-weight:bold;color:#fff;/* background:url(/cm/images/contents/bg_btn_com.gif) no-repeat; */margin-left:-3px;background: #5b5b5b;border: 1px solid #3d3d3d;border-radius: 3px;height: 11px;}
+.btn_com a:hover {   border-color: #d82b2b;    box-shadow: 2px 2px 3px rgb(235 69 69 / 40%);    background: #eb4545; box-shadow:none;}
 
-
-
+.btn_com.btn_yes {}
+.btn_com.btn_ {}
 
 
 .btn_com.right , .btn_com.left{position:relative;display:inline-block;padding: 0;margin: 0;vertical-align:middle;border: 1px solid #a5a5a5;width: 45px;height: 34px;box-sizing: border-box;border-radius: 2px;background: none;border-radius: 3px;}
-.btn_com.right a , .btn_com.left a{text-indent: -9999px;font-size: 0;display: block;position: relative;background: none;}
+.btn_com.right a , .btn_com.left a{text-indent: -9999px;font-size: 0;display: block;position: relative;background: none;border: none;}
 .btn_com.right {}
 .btn_com.left{}
-.btn_com.right a:before {content: "\f054";width: 30px;display: inline-block;    font-family: 'Font Awesome 5 Free';font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;font-size: 16px;margin: 0 auto;position: absolute;top: 8px;left: 11px;text-indent: 0;text-align: center;color: #656565;}
-.btn_com.left a:before {content: "\f053";width: 30px;display: inline-block;    font-family: 'Font Awesome 5 Free';font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;font-size: 16px;margin: 0 auto;position: absolute;top: 8px;left: 8px;text-indent: 0;text-align: center;color: #656565;}
+.btn_com.right a:before {content: "\f054";width: 30px;display: inline-block;font-family: 'Font Awesome 5 Free';font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;font-size: 16px;margin: 0 auto;position: absolute;top: 11px;left: 11px;text-indent: 0;text-align: center;color: #656565;}
+.btn_com.left a:before {content: "\f053";width: 30px;display: inline-block;font-family: 'Font Awesome 5 Free';font-size: inherit;text-rendering: auto;-webkit-font-smoothing: antialiased;vertical-align: text-bottom;font-size: 16px;margin: 0 auto;position: absolute;top: 11px;left: 8px;text-indent: 0;text-align: center;color: #656565;}
 .btn_com.right:hover  , .btn_com.left:hover  {background:#f2f3f6}
 .btn_com.right:hover a , .btn_com.left:hover a {    animation: aniLR 1s infinite;}
 
@@ -308,6 +312,19 @@ a:hover,a:active,a:focus{text-decoration:none}
 .btn_sh a:hover:before {/* color:#eb4545; */}
 .btn_sh.search a{background:#a13e3e; border-color:#a13e3e;}
 .btn_sh.search a:hover{background:#d82b2b; border-color:#d82b2b;}
+
+
+.btn_yes a{background: #eb4545;border: 1px solid #d82b2b;}
+.btn_yes a:before {content:"\f058"; font-family: 'Font Awesome 5 Free'; font-size: inherit; margin:0 2px 0 0;}
+.btn_yes a:hover {border-color: #d82b2b;background: #d82b2b;}
+
+.btn_no a{background: #2539a5;border: 1px solid #1a237e;}
+.btn_no a:before {content:"\f057"; font-family: 'Font Awesome 5 Free'; font-size: inherit; margin:0 2px 0 0;}
+.btn_no a:hover {border-color: #1a237e;background: #2847ff;}
+
+
+
+
 
 .btn_sh.end a:before { content: "\f28d";}
 .btn_sh.search a:before { content: "\f002";}
@@ -639,8 +656,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 .w2popup_window {border: 1px solid #333333;}
 .w2popup_window .w2window_header {height:27px;background: #333333;}
 .w2popup_window .w2window_header_icon {width:0; background:#5c6572;}
-.w2popup_window .w2window_header_title {overflow:hidden;height:27px;background: #333333;padding:0;color:#fff;font-size:14px;line-height:27px;left:10px;}
-.w2popup_window .w2window_close {background:url(/cm/images/contents/layerpop_closebtn.pn1000enter no-repeat; width:15px; height:15px; top:4px; right: 10px; left: inherit;}
+.w2popup_window .w2window_header_title {overflow:hidden;height:27px;background: #333333;padding:0;color:#fff;font-size:14px;/* line-height:27px; */left:10px;box-sizing: border-box;padding: 5px 0;}
+.w2popup_window .w2window_close {background:url(/cm/images/contents/layerpop_closebtn.png) center no-repeat; width:15px; height:15px; top:4px; right: 10px; left: inherit;}
  
 .w2popup_window .w2window_body {position:absolute; top:40px; border:none; background:#fff; margin:0; padding:0; overflow:hidden;}
 .w2popup_window .w2window_content {border:none; top:0; left:0; right:0; bottom:0; margin:0; padding:0; overflow:hidden;}
@@ -652,7 +669,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 /* Treeview */
 
 /* 지도 관련 */
-.tma3_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
+.tmap_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
 .tmap_vertex_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
 .tmap_busstop_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
 .tmap_cross_label { background-color: rgba(255,255,255,0.8); color:black; padding: 3px; border: 0.5px solid black; }
