--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -31,19 +31,19 @@
 
 
 .grdc_main_container {display:grid; justify-items: center; grid-template-rows:minmax(30x, max-content)}
-.grdc_bms_main {display:grid; grid-template-columns:minmax(1280px,1830px)}
-.grdc_bms_main_content {display:grid; grid-template-columns:4.8fr 25px 5.2fr}
-.grdc_bms_main_left {display:grid; grid-template-rows:30px 4.8fr 25px 5.2fr}
-.grdc_bms_main_right {display:grid; grid-template-rows:340px 25px 380px}
-.grdc_bms_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
+.grdc_brt_main {display:grid; grid-template-columns:minmax(1280px,1830px)}
+.grdc_brt_main_content {display:grid; grid-template-columns:4.8fr 25px 5.2fr}
+.grdc_brt_main_left {display:grid; grid-template-rows:30px 4.8fr 25px 5.2fr}
+.grdc_brt_main_right {display:grid; grid-template-rows:340px 25px 380px}
+.grdc_brt_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
 .grdr_20_5_320 {display:grid; grid-template-rows: minmax(20px, max-content) 5px 320px;}
 .grdr_20_5_350 {display:grid; grid-template-rows: minmax(20px, max-content) 5px 350px;}
 
-.grdc_brt_main {display:grid; grid-template-columns:minmax(1280px,1830px)}
-.grdc_brt_main_content {display:grid; grid-template-columns:4.8fr 25px 5.2fr}
-.grdc_brt_main_left {display:grid; grid-template-rows:30px auto}
-.grdc_brt_main_right {display:grid; grid-template-rows:340px 25px 380px}
-.grdc_brt_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
+.grdc_bms_main {display:grid; grid-template-columns:minmax(1280px,1830px)}
+.grdc_bms_main_content {display:grid; grid-template-columns:4.8fr 25px 5.2fr}
+.grdc_bms_main_left {display:grid; grid-template-rows:30px auto}
+.grdc_bms_main_right {display:grid; grid-template-rows:340px 25px 380px}
+.grdc_bms_main_right_content {display:grid; grid-template-columns:1fr 25px 1fr}
 .grdc_brtMain {display:grid; justify-items: center; grid-template-columns:auto}
 .grdc_1f_25_1f {display:grid; grid-template-columns:1fr 25px 1fr;}
 
@@ -178,8 +178,8 @@
 
 .small_vertical_line{box-shadow: 0 0 0 3px #333 inset; margin-top: 50px; margin-bottom: 50px; width: 2px;margin-left: 10px;}
 .vertical_line2{box-shadow: 0 0 0 3px #333 inset;height: 100%;width: 2px;margin-left: 24px;}
-.vertical_line{box-shadow: 0 0 0 3px #eb4545 inset;height: 100%;width: 2px;margin-left: 9px;}
-.horizontal_line{box-shadow: 0 0 0 3px #eb4545 inset;height: 2px;width: 100%;margin-top: 10px;margin-bottom: 10px;}
+.vertical_line{height: 100%;width: 2px;margin-left: 9px;background: url('/cm/images/add/bg_line.png') 0 0;}
+.horizontal_line{;height: 2px;width: 100%;margin-top: 10px;margin-bottom: 10px; background: url('/cm/images/add/bg_line.png') 0 0;}
 
 /* 상단 검색창 */
 .gr_search{position:relative;padding: 8px 21px;margin:0;border:1px solid #ced4d9;border-top: 2px solid /* #757984 */rgb(235 69 69);background:#f7f7f7;margin-bottom:10px;height:23px;}
