--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -468,10 +468,17 @@ body {
 
 .tac_layout .w2tabcontrol_contents_wrapper{position: absolute; left: 0; right: 0; top: 0; bottom: 0; height: auto !important; overflow: auto; background: #fff;  border-width: 0px 1px 1px 1px;/*  border-style: solid;  */border-color: #c4cad6; box-sizing:border-box;}
 .tac_layout .w2tabcontrol_contents_wrapper.w2iframe{height:inherit !important}
-/* active */
+
+/* 탭 비 활성화 인 경우 색 */
 .tac_layout .w2tabcontrol_tabhost .w2tabcontrol_tab_left,
 .tac_layout .w2tabcontrol_tabhost .w2tabcontrol_tab_center,
-.tac_layout .w2tabcontrol_tabhost .w2tabcontrol_tab_right{background:none;}
+.tac_layout .w2tabcontrol_tabhost .w2tabcontrol_tab_right{background:#f7f7f7;}
+
+/* 탭 활성화 인 경우 색 */
+.tac_layout .w2tabcontrol_tabhost .w2tabcontrol_active .w2tabcontrol_tab_left,
+.tac_layout .w2tabcontrol_tabhost .w2tabcontrol_active .w2tabcontrol_tab_center,
+.tac_layout .w2tabcontrol_tabhost .w2tabcontrol_active  .w2tabcontrol_tab_right{background:none;}
+
 /* mask */
 .tac_layout .w2tabcontrol_control .mask{left:0;right:90px;margin-left:0;}
 .tac_layout .w2tabcontrol_control .btn_scrollLeft{right:66px;display:none}
@@ -482,41 +489,69 @@ body {
 .btn_closeAll{display:none; z-index:1; text-indent:-9999px; position:absolute; width:20px; height:19px; right:5px; top:9px; background:url(/cm/images/contents/close_off.png) no-repeat left top;}
 .btn_CloseAll:hover{background-image:url(/cm/images/contents/close_on.png);}
 
-.bms_visual{
-	background-image: url('/cm/images/bms/bms_visual.png');
-	border: 1px solid #333;
+
+.grdc_brt_main {    min-width: 1600px;}
+.brt_visual{
+ background-image: url('/cm/images/brt/brt_visual.png');
+	border: 1px solid #ced4d9;
 	width: 100%;
 	background-repeat: no-repeat;
 	object-fit: cover;
 	/* width: 100%;
 	height: 100vh;
-	background-image: url('/cm/images/inc/bms_visual.png');
+	background-image: url('/cm/images/inc/brt_visual.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center; */
+	min-width: 894px;
+	height: 323px;
+	box-sizing: border-box;
 }
 
-.bms_cont li{display:block; overflow:hidden; margin-bottom:20px; }
-.bms_cont li ul {position:relative; overflow:hidden; height:72px; border: 1px solid #333;}
-.bms_cont li ul li{position:absolute; left: 120px;}
-.bms_cont li.punct ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/punctuality.PNG) no-repeat left top;}
-.bms_cont li.outbreak ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/outbreak.PNG) no-repeat left top;}
-.bms_cont li.violation ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/violation.PNG) no-repeat left top;}
-.bms_cont li ul li.repeat{height: 72px; left: 60px; right: 60px;}
-.bms_cont li ul li .count{margin-left:20px}
-
-.brt_visual{
-	background-image: url('/cm/images/brt/brt_visual.png');
-	border: 1px solid #333;
-	height: 100%;
+.brt_cont_lst >  li{display:block; overflow:hidden; margin-bottom:20px; }
+.brt_cont > li > ul > li:last-child {margin:0;right: 34px !important;left: inherit;}
+.brt_cont li ul {position:relative;overflow:hidden;height: 104px;border: 1px solid #ced4d9;box-sizing: border-box;padding: 18px;}
+.brt_cont li ul li{position:absolute;left: 120px;}
+.brt_cont li.punct ul li:first-child{left: 40px;width:60px;height:100%;background:url(/cm/images/brt/punctuality.PNG) no-repeat left top;height: 60px;top: 29px;}
+.brt_cont li.outbreak ul li:first-child{left:0;width:60px;height:100%;background:url(/cm/images/brt/outbreak.PNG) no-repeat left top;height: 60px;left: 31px;top: 21px;}
+.brt_cont li.violation ul li:first-child{left:0;width:60px;height:100%;background:url(/cm/images/brt/violation.PNG) no-repeat left top;height: 60px;left: 34px;top: 26px;}
+.brt_cont li ul li.repeat{height: 72px;left: 98px;right: inherit;font-size: 21px;top: 39px;line-height: 1 !important;}
+.brt_cont li ul li .count{display: block;float: right;}
+.brt_cont li ul li  strong {min-width: 57px;display: inline-block;float: left;}
+ .brt_cont_lst > li > ul > li  {font-size: 17px;top: 21px;text-align: left;}
+.brt_cont_lst > li > ul > li:last-child {
+    /* background: red; */
+    width: 122px;
+    right: 15%;
+    left: inherit !important;
+    line-height: 1.9;
+    top: 20px;
+}
+.bms_visual{
+	background-image: url('/cm/images/bms/bms_visual.png');
+	/*     background-image: url(/cm/images/brt/bms_visual.png); */
+	border: 1px solid #ced4d9;
+	width: 100%;
 	background-repeat: no-repeat;
+	object-fit: cover;
+	height: 743px;
+	width: 894px;
+	box-sizing: border-box;
 	/* width: 100%;
 	height: 100vh;
-	background-image: url('/cm/images/inc/bms_visual.png');
+	background-image: url('/cm/images/inc/brt_visual.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center; */
+	box-sizing: border-box;
 }
+
+.bms_visual:after {background-image: url('/cm/images/bms/bms_visual_tle.png');content:'';display:block;width: 424px;height: 88px;margin: 54px auto 0;}
+.bms_main_link > ul {}
+.bms_main_link > ul > li {}
+.bms_main_link > ul > li a {}
+.bms_main_link > ul > li a:hover {}
+
 
 .brt_bit{
 	background-image: url('/cm/images/brt/BIT-RED.png');
@@ -528,33 +563,34 @@ body {
 	 */
 	/* width: 100%;
 	height: 100vh;
-	background-image: url('/cm/images/inc/bms_visual.png');
+	background-image: url('/cm/images/inc/brt_visual.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center; */
 }
+.map_brtMain { height:351px; }
 
-.brt_cont_left li{display:block; overflow:hidden; margin-bottom:20px; }
-.brt_cont_left li ul {position:relative; overflow:hidden; height:100px; border: 1px solid #333;}
-.brt_cont_left li ul li{position:absolute; left: 120px;}
-.brt_cont_left li.weather_temp ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/brt/sunny_icon.PNG) no-repeat left top;}
-.brt_cont_left li.weather_humid ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/brt/humidity_icon.PNG) no-repeat left top;}
-.brt_cont_left li ul li.repeat{height: 100px; left: 60px; right: 60px;}
-.brt_cont_left li ul li .count{margin-left:20px}
+.bms_cont_left li{display:block; overflow:hidden; margin-bottom:20px; }
+.bms_cont_left li ul {position:relative; overflow:hidden; height:100px; border: 1px solid #333;}
+.bms_cont_left li ul li{position:absolute; left: 120px;}
+.bms_cont_left li.weather_temp ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/sunny_icon.PNG) no-repeat left top;}
+.bms_cont_left li.weather_humid ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/humidity_icon.PNG) no-repeat left top;}
+.bms_cont_left li ul li.repeat{height: 100px; left: 60px; right: 60px;}
+.bms_cont_left li ul li .count{margin-left:20px}
 
-.brt_cont_right li{display:block; overflow:hidden; margin-bottom:20px; }
-.brt_cont_right li ul {position:relative; overflow:hidden; height:35px; border: 1px solid #333;}
-.brt_cont_right li ul li{position:absolute; left: 120px;}
-.brt_cont_right li.fine_dust ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/normal_icon.PNG) no-repeat left top;}
-.brt_cont_right li.ozone ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/bad_icon.PNG) no-repeat left top;}
-.brt_cont_right li.nitrogen_dioxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/good_icon.PNG) no-repeat left top;}
-.brt_cont_right li.carbon_monoxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/good_icon.PNG) no-repeat left top;}
-.brt_cont_right li.sulfur_dioxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/brt/good_icon.PNG) no-repeat left top;}
-.brt_cont_right li ul li.repeat{height: 35px; left: 10px;}
-.brt_cont_right li ul li.count{margin-left:20px}
-.brt_cont_right li ul li.air_status{margin-left:20px; left:200px;}
-.brt_cont_right li ul li.air_icon{margin-left:20px; }
+.bms_cont_right li{display:block; overflow:hidden; margin-bottom:20px; }
+.bms_cont_right li ul {position:relative; overflow:hidden; height:35px; border: 1px solid #333;}
+.bms_cont_right li ul li{position:absolute; left: 120px;}
+.bms_cont_right li.fine_dust ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/normal_icon.PNG) no-repeat left top;}
+.bms_cont_right li.ozone ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/bad_icon.PNG) no-repeat left top;}
+.bms_cont_right li.nitrogen_dioxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;}
+.bms_cont_right li.carbon_monoxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;}
+.bms_cont_right li.sulfur_dioxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;}
+.bms_cont_right li ul li.repeat{height: 35px; left: 10px;}
+.bms_cont_right li ul li.count{margin-left:20px}
+.bms_cont_right li ul li.air_status{margin-left:20px; left:200px;}
+.bms_cont_right li ul li.air_icon{margin-left:20px; }
 
-.brt_main_link {position:relative; top:150px; }
-.brt_main_link ul li{position:relative; float:left; display:inline-block;  height:140px; width:135px; background-color: white; margin-right: 11px; margin-left: 11px; text-align: center;}
-.brt_main_link ul li a img {margin-top: 25px;margin-bottom: 10px;}
+.bms_main_link {position:relative; top:150px; }
+.bms_main_link ul li{position:relative; float:left; display:inline-block;  height:140px; width:135px; background-color: white; margin-right: 11px; margin-left: 11px; text-align: center;}
+.bms_main_link ul li a img {margin-top: 25px;margin-bottom: 10px;}
