[양현우] 실시간 위치정보 모니터링 클릭 오버레이 웹소켓 처리

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -723,8 +723,10 @@ a:hover,a:active,a:focus{text-decoration:none}
 .clickoverlay {
     background: #fff;
     position: relative;
-    bottom: 57px;
-    left:2px;
+/*     bottom: 57px;
+    left:2px; */
+    bottom: 30px;
+    left: -95px;
     border-radius: 6px;
     border: 1px solid #ccc;
     border-bottom: 2px solid #ddd;
@@ -732,7 +734,7 @@ a:hover,a:active,a:focus{text-decoration:none}
     /* position: absolute;
     left: 761px;
     top: 407px;	 */
-    z-index: 10000000000;
+    width: 190px;
 }
 
 .clickoverlay:after {
@@ -748,7 +750,7 @@ a:hover,a:active,a:focus{text-decoration:none}
 
 .clickoverlay .tit {
 	padding: 14px 40px 14px 14px;
-    font-size: 14px;
+    font-size: 12px;
     color: #303030;
     background-color: #f5f8fc;
     border-bottom: 1px solid #9e9e9e;
@@ -760,13 +762,11 @@ a:hover,a:active,a:focus{text-decoration:none}
 	position: absolute;
     width: 15px;
     height: 15px;
-    right: 15px;
     top: 15px;
     opacity: 1;       	
 }
 
 .clickoverlay #popup-closer{
-    right: 40px;
     background: url(/cm/images/tmap/layer_close.png) center center no-repeat;
 	position: absolute;
     width: 15px;
@@ -791,28 +791,25 @@ a:hover,a:active,a:focus{text-decoration:none}
     max-height: 200px;
     overflow-y: auto;
 }
-    
-.conderror {
-    background: #eb4545;
-    color : white;
-    position: relative;
-    bottom: 57px;
-    left:2px;
-    border-radius: 6px;
-    border: 1px solid #ccc;
-    border-bottom: 2px solid #ddd;
-    float: left;
+
+.clickoverlay table.tby03 {
+	border-spacing: 0px;
+	width: 100%;
 }
 
-.conderror:after {
-    content: '';
-    position: absolute;
-    margin-left: -12px;
-    left: 50%;
-    bottom: -12px;
-    width: 22px;
-    height: 12px;
-    background: url(/cm/images/tmap/vertex_red.png);
+.clickoverlay table.tby03 th {
+    padding: 8px 10px;
+    background-color: #f3f5f8;
+    font-weight: bold;
+    border: 1px solid #d2d2d2;
+    text-align: center;
+}
+
+.clickoverlay table.tby03 td {
+    padding: 8px 10px;
+    border: 1px solid #d2d2d2;
+    background-color: #fff;
+    word-break: break-all;
 }
 
 .busoverlay {
@@ -848,13 +845,37 @@ a:hover,a:active,a:focus{text-decoration:none}
 .busoverlay:nth-of-type(n) {
     border: 0;
     box-shadow: 0px 1px 2px #888;
+} 
+    
+.conderror {
+    background: #eb4545;
+    color : white;
+    position: relative;
+    bottom: 57px;
+    left:2px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;
 }
+
+.conderror:after {
+    content: '';
+    position: absolute;
+    margin-left: -12px;
+    left: 50%;
+    bottom: -12px;
+    width: 22px;
+    height: 12px;
+    background: url(/cm/images/tmap/vertex_red.png);
+}
+
 
 /* 지도 카테고리 관련*/
 .map_wrap, .map_wrap * {margin:0; padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
 .map_wrap {position:relative;width:100%;height:350px;}
 .category {position:absolute;top:10px;left:10px;border-radius: 5px; border:1px solid #909090;box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);background: #fff;overflow: hidden;z-index: 2;}
-.category li {float:left;list-style: none;width:50px;px;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer;}
+.category li {float:left;list-style: none;width:50px;px;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer; width: 60px;}
 .category li.on {background: rgb(237, 243, 251);}
 .category li:hover {background: rgb(237, 243, 251);border-left:1px solid #acacac;margin-left: -1px;}
 .category li:last-child{margin-right:0;border-right:0;}
@@ -917,7 +938,7 @@ a:hover,a:active,a:focus{text-decoration:none}
     overflow: hidden;
     z-index: 2;
     bottom: 5px;}
-.moni_img li {float:left;list-style: none;width:50px;px;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer; width: 100px;}
+.moni_img li {float:left;list-style: none;border-right:1px solid #acacac;padding:6px 0;text-align: center; cursor: pointer; width: 100px;}
 .moni_img li.on {background: #fff;}
 .moni_img li:hover {background: #ffe6e6;border-left:1px solid #acacac;margin-left: -1px;}
 .moni_img li:last-child{margin-right:0;border-right:0;}
@@ -1104,32 +1125,7 @@ a:hover,a:active,a:focus{text-decoration:none}
     /* background-size: 508px 492px;    */ 
 }
 
-/* .map-type .map-type-01 {
-    border: 2px solid #0375f4;
-    background-color: #fff;
-    vertical-align: middle;
-    padding-top: 10px;
-    font-weight: bold;
-    width: 70px;
-    height: 70px;
-    display: block;
-    border-radius: 35px;
-    margin-top: 0px;
-    margin-right: 15px;
-    cursor: pointer;	
-} */
 
-/* .map-type .map-type-01 {
-	background: url(/images/main/map01_off.png);	
-}
-
-.map-type .map-type-01 {
-	background: url(/images/main/map01_off.png);		
-}
-
-.map-type .map-type-01 {
-	background: url(/images/main/map01_off.png);	
-} */
 
 /* 지현추가 : font-awesome.css */
 
