[백승종] 수정 사항 적용

--- a/SBRT-Web/src/main/resources/static/cm/css/layout.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/layout.css
@@ -27,7 +27,7 @@
 .popup_header { overflow:hidden; height:50px }
 .popup_content { gap: 0px 5px; margin-bottom: 10px;  }
 
-.popup_bottom { gap: 0px 5px; margin-bottom: 10px; text-align:center; }
+.popup_bottom { gap: 0px 5px; margin-bottom: 5px; text-align:center; }
 
 
 .grdc_main_container {display:grid; justify-items: center; grid-template-rows:minmax(30x, max-content)}
@@ -176,7 +176,7 @@
 
 .required {font-color:red;}
 
-.small_vertical_line{box-shadow: 0 0 0 3px #333 inset; margin-top: 50px; margin-bottom: 50px; width: 2px;margin-left: 10px;}
+.small_vertical_line{margin-top: 0;margin-bottom: 0;width: 2px;margin-left: 10px;background: url('/cm/images/add/bg_line.png') 0 0;height: 221px;}
 .vertical_line2{box-shadow: 0 0 0 3px #333 inset;height: 100%;width: 2px;margin-left: 24px;}
 .vertical_line{height: 100%;width: 2px;margin-left: 9px;background: url('/cm/images/add/bg_line.png') 0 0;}
 .horizontal_line{;height: 2px;width: 100%;margin-top: 10px;margin-bottom: 10px; background: url('/cm/images/add/bg_line.png') 0 0;}
