--- a/SBRT-Web/src/main/resources/static/cm/css/main.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/main.css
@@ -534,7 +534,7 @@ body {
 	width: 100%;
 	background-repeat: no-repeat;
 	object-fit: cover;
-	height: 743px;
+	height: 720px;
 	width: 894px;
 	box-sizing: border-box;
 	/* width: 100%;
@@ -546,10 +546,56 @@ body {
 	box-sizing: border-box;
 }
 
-.bms_visual:after {background-image: url('/cm/images/bms/bms_visual_tle.png');content:'';display:block;width: 424px;height: 88px;margin: 54px auto 0;}
-.bms_main_link > ul {}
-.bms_main_link > ul > li {}
-.bms_main_link > ul > li a {}
+.bms_visual:before {background-image: url('/cm/images/bms/bms_visual_tle.png');content:'';display:block;width: 424px;height: 88px;margin: 49px auto 0;}
+.bms_main_link > ul {
+    text-align: center;
+}
+.bms_main_link > ul > li {
+    display: inline-block;
+    vertical-align: top;
+    animation: mDBzoom 1s ease backwards;
+}
+
+
+.bms_main_link > ul > li:nth-child(1) {animation-delay: 0.1s;}
+.bms_main_link > ul > li:nth-child(2) {animation-delay: 0.3s;}
+.bms_main_link > ul > li:nth-child(3) {animation-delay: 0.5s;}
+.bms_main_link > ul > li:nth-child(4) {animation-delay: 0.7s;}
+
+
+.bms_main_link > ul > li > a:hover > img {
+
+    transition-property: transform;
+    transform: rotateY( 180deg );
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out; }
+
+
+
+
+	@keyframes mDBzoom {
+		0% {opacity: 0;transform: scale(1.1);} 
+		100% {opacity: 1; transform: scale(1);} 
+	}
+
+
+
+.bms_main_link > ul > li > a:hover {box-shadow: 0 0 15px 0 rgb(13 36 78 / 15%);}
+.bms_main_link > ul > li a {
+    width: 135px;
+    height: 141px;
+    background: #fff;
+    box-sizing: border-box;
+    padding: 97px 5px 5px 5px;
+    display: block;
+    margin: 10px;
+    text-align: center;
+    border: 1px solid #ced4d9;
+    border-radius: 10px;
+    position: relative;
+    font-size: 14px;
+    color: #555555;
+}
 .bms_main_link > ul > li a:hover {}
 
 
@@ -558,39 +604,37 @@ body {
 	background-repeat: no-repeat;
 	height: 600px;
 	background-position: top;
-	/* margin-right: auto;
-	margin-left: auto;
-	 */
-	/* width: 100%;
-	height: 100vh;
-	background-image: url('/cm/images/inc/brt_visual.png');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center; */
 }
 .map_brtMain { height:351px; }
 
-.bms_cont_left li{display:block; overflow:hidden; margin-bottom:20px; }
-.bms_cont_left li ul {position:relative; overflow:hidden; height:100px; border: 1px solid #333;}
-.bms_cont_left li ul li{position:absolute; left: 120px;}
-.bms_cont_left li.weather_temp ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/sunny_icon.PNG) no-repeat left top;}
-.bms_cont_left li.weather_humid ul li:first-child{left:0; width:60px; height:100%; background:url(/cm/images/bms/humidity_icon.PNG) no-repeat left top;}
-.bms_cont_left li ul li.repeat{height: 100px; left: 60px; right: 60px;}
-.bms_cont_left li ul li .count{margin-left:20px}
 
-.bms_cont_right li{display:block; overflow:hidden; margin-bottom:20px; }
-.bms_cont_right li ul {position:relative; overflow:hidden; height:35px; border: 1px solid #333;}
+
+.bms_cont_wrap {border:1px solid #ced4d9;border-top: 2px solid #333333;box-sizing: border-box;padding: 60px 107px;}
+
+.bms_cont_left li{display:block; overflow:hidden; margin-bottom:20px; }
+.bms_cont_left li ul {position:relative;overflow:hidden;height:100px;/* border: 1px solid #ced4d9; */box-sizing: border-box;padding: 22px;}
+.bms_cont_left li ul li{position:absolute;left: 160px;top: 34px;font-size: 22px;}
+.bms_cont_left li.weather_temp ul li:first-child{left: 20px;width:60px;height: 60px;background:url(/cm/images/bms/sunny_icon.PNG) no-repeat left top;margin: 0;top: 20px;}
+.bms_cont_left li.weather_humid ul li:first-child{left: 33px;width:60px;height: 60px;background:url(/cm/images/bms/humidity_icon.PNG) no-repeat left top;margin: 0;top: 27px;}
+.bms_cont_left li ul li.repeat{left: 88px;font-size: 22px;margin: 0;top: 32px;}
+.bms_cont_left li ul li .count{margin-left:20px;font-size: 33px;font-weight: bold;}
+.bms_cont_left li ul li strong{font-size:15px;vertical-align: top;margin: 2px 0 0 0;display: inline-block;}
+
+.bms_cont_right li{display:block;overflow:hidden;}
+.bms_cont_right li ul {position:relative;overflow:hidden;height:35px;line-height: 35px;width: 275px;margin: 5px 0 5px 50px;}
 .bms_cont_right li ul li{position:absolute; left: 120px;}
-.bms_cont_right li.fine_dust ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/normal_icon.PNG) no-repeat left top;}
-.bms_cont_right li.ozone ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/bad_icon.PNG) no-repeat left top;}
-.bms_cont_right li.nitrogen_dioxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;}
-.bms_cont_right li.carbon_monoxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;}
-.bms_cont_right li.sulfur_dioxide ul li.air_icon{left:250px; width:60px; height:100%; background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;}
-.bms_cont_right li ul li.repeat{height: 35px; left: 10px;}
+
+.bms_cont_right li.fine_dust ul li.air_icon{right: 0;width: 25px;height: 25px;background:url(/cm/images/bms/normal_icon.PNG) no-repeat left top;top: 4px;margin: 0;display: block;left: inherit;}
+.bms_cont_right li.ozone ul li.air_icon{right: 0;width: 25px;height: 25px;background:url(/cm/images/bms/bad_icon.PNG) no-repeat left top;top: 4px;margin: 0;display: block;left: inherit;}
+.bms_cont_right li.nitrogen_dioxide ul li.air_icon{right: 0;width: 25px;height: 25px;background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;top: 4px;margin: 0;display: block;left: inherit;}
+.bms_cont_right li.carbon_monoxide ul li.air_icon{right: 0;width: 25px;height: 25px;background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;top: 4px;margin: 0;display: block;left: inherit;}
+.bms_cont_right li.sulfur_dioxide ul li.air_icon{right: 0;width: 25px;height: 25px;background:url(/cm/images/bms/good_icon.PNG) no-repeat left top;top: 4px;margin: 0;display: block;left: inherit;}
+
+.bms_cont_right li ul li.repeat{height: 35px;left: 10px;width: 275px;}
 .bms_cont_right li ul li.count{margin-left:20px}
 .bms_cont_right li ul li.air_status{margin-left:20px; left:200px;}
 .bms_cont_right li ul li.air_icon{margin-left:20px; }
 
-.bms_main_link {position:relative; top:150px; }
-.bms_main_link ul li{position:relative; float:left; display:inline-block;  height:140px; width:135px; background-color: white; margin-right: 11px; margin-left: 11px; text-align: center;}
-.bms_main_link ul li a img {margin-top: 25px;margin-bottom: 10px;}
+.bms_main_link {position:relative;top: 25px;}
+.bms_main_link ul li{/* position:relative; *//* float:left; *//* display:inline-block; *//* height:140px; *//* width:135px; *//* background-color: white; *//* margin-right: 11px; *//* margin-left: 11px; *//* text-align: center; */}
+.bms_main_link ul li a img {margin-top: 25px;margin-bottom: 10px;position: absolute;top: 1px;left: 36px;width: 60px;height: 60px;}
