[양현우] 실시간 위치정보 모니터링 우클릭 이벤트 추가

--- a/SBRT-Web/src/main/resources/static/cm/css/all.css
+++ b/SBRT-Web/src/main/resources/static/cm/css/all.css
@@ -720,13 +720,13 @@ a:hover,a:active,a:focus{text-decoration:none}
     background: url(/cm/images/tmap/vertex_white.png);
 }
 
-.clickoverlay {
+.sttnInfopopup {
     background: #fff;
     position: relative;
 /*     bottom: 57px;
     left:2px; */
-    bottom: 30px;
-    left: -95px;
+    bottom: 35px;
+    left: -94px;
     border-radius: 6px;
     border: 1px solid #ccc;
     border-bottom: 2px solid #ddd;
@@ -735,6 +735,23 @@ a:hover,a:active,a:focus{text-decoration:none}
     left: 761px;
     top: 407px;	 */
     width: 190px;
+}
+
+.busInfoPopup {
+    background: #fff;
+    position: relative;
+/*     bottom: 57px;
+    left:2px; */
+    bottom: 45px;
+    left: -182px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    border-bottom: 2px solid #ddd;
+    float: left;	
+    /* position: absolute;
+    left: 761px;
+    top: 407px;	 */
+    /* width: 190px; */
 }
 
 .clickoverlay:after {
@@ -749,7 +766,8 @@ a:hover,a:active,a:focus{text-decoration:none}
 }
 
 .clickoverlay .tit {
-	padding: 14px 40px 14px 14px;
+	padding: 11px 40px 11px 14px;
+	/* padding: 14px 40px 14px 14px; */
     font-size: 12px;
     color: #303030;
     background-color: #f5f8fc;
@@ -772,7 +790,19 @@ a:hover,a:active,a:focus{text-decoration:none}
     width: 15px;
     height: 15px;
     right: 15px;
-    top: 15px;
+    /* top: 15px; */
+    top: 8px;
+    opacity: 1;    	
+}
+
+.clickoverlay #busInfo-closer{
+    background: url(/cm/images/tmap/layer_close.png) center center no-repeat;
+	position: absolute;
+    width: 15px;
+    height: 15px;
+    right: 15px;
+    /* top: 15px; */
+    top: 8px;
     opacity: 1;    	
 }
 
@@ -810,6 +840,42 @@ a:hover,a:active,a:focus{text-decoration:none}
     border: 1px solid #d2d2d2;
     background-color: #fff;
     word-break: break-all;
+}
+
+.rightclickoverlay {
+    overflow: hidden;
+    position: absolute;
+    z-index: 9;
+    width: 120px;
+    margin: -3px 0 0 -11px;
+    padding: 3px 11px;
+    background: url(//t1.daumcdn.net/localimg/localimages/07/2018/pc/context/bg_context_190408.png) no-repeat;
+    white-space: nowrap;	
+}
+
+.rightclickoverlay .contextWrap {
+    padding: 10px 0 9px;
+    -webkit-user-select: none;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -ms-user-select: none;
+    user-select: none;	
+}
+
+.rightclickoverlay a {
+	display: block;
+    overflow: hidden;
+    height: 31px;
+    padding-left: 16px;
+    font-size: 12px;
+    line-height: 28px;
+    color: #444;	
+}
+
+.rightclickoverlay a .text {
+    display: block;
+    background: 0;
+    cursor: pointer;
 }
 
 .busoverlay {
